Accesibilité: Correction sur Contrast ratio sur Footer

--- a/style.css
+++ b/style.css
@@ -730,7 +730,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .portfolio-thumb {
